Upgrade WireMock to 3.3.1